--- a/spotify_quiz/pubspec.yaml
+++ b/spotify_quiz/pubspec.yaml
@@ -46,6 +46,8 @@ dependencies:
   firebase_auth: ^4.2.0
   cloud_firestore: ^4.2.0
   firebase_database: ^10.0.7
+  equatable: ^2.0.5
+  bloc: ^8.1.0
 
 dev_dependencies:
   flutter_test:
