--- a/spotify_quiz/pubspec.yaml
+++ b/spotify_quiz/pubspec.yaml
@@ -57,6 +57,8 @@ dependencies:
   url_launcher: ^6.1.9
   spotify: ^0.8.0
   webview_flutter: ^4.0.6
+  bloc: ^8.1.0
+  flutter_bloc: ^8.1.1
 
 dev_dependencies:
   flutter_test:
