--- a/spotify_quiz/pubspec.yaml
+++ b/spotify_quiz/pubspec.yaml
@@ -38,6 +38,11 @@ dependencies:
   
   flutter_dotenv: ^5.0.2
 
+  authentication_repository:
+    path: packages/authentication_repository
+  formz: ^0.4.0
+  user_repository:
+    path: packages/user_repository
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
