--- a/spotify_quiz/pubspec.yaml
+++ b/spotify_quiz/pubspec.yaml
@@ -38,6 +38,11 @@ dependencies:
   
   flutter_dotenv: ^5.0.2
 
+  authentication_repository:
+    path: packages/authentication_repository
+  formz: ^0.4.0
+  user_repository:
+    path: packages/user_repository
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
@@ -46,6 +51,9 @@ dependencies:
   firebase_auth: ^4.2.0
   cloud_firestore: ^4.2.0
   firebase_database: ^10.0.7
+  http: ^0.13.5
+  flutter_bloc: ^8.1.1
+  equatable: ^2.0.5
 
 dev_dependencies:
   flutter_test:
