--- a/spotify_quiz/pubspec.yaml
+++ b/spotify_quiz/pubspec.yaml
@@ -55,6 +55,7 @@ dependencies:
   bloc: ^8.1.0
   flutter_bloc: ^8.1.1
   google_fonts: ^4.0.3
+  animations: ^2.0.7
 
 dev_dependencies:
   flutter_test:
