--- a/spotify_quiz/android/app/src/main/AndroidManifest.xml
+++ b/spotify_quiz/android/app/src/main/AndroidManifest.xml
@@ -1,6 +1,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.spotify_quiz">
    <uses-permission android:name="android.permission.INTERNET"/>
+   <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
    <application
         android:label="spotify_quiz"
         android:name="${applicationName}"
