--- a/spotify_quiz/packages/user_repository/pubspec.yaml
+++ b/spotify_quiz/packages/user_repository/pubspec.yaml
@@ -7,7 +7,11 @@ environment:
 
 dependencies:
   equatable: ^2.0.0
+  flutter_dotenv: ^5.0.2
+  spotify: ^0.8.0
   uuid: ^3.0.0
+  webview_flutter: ^4.0.6
+
 
 dev_dependencies:
   very_good_analysis: ^3.1.0
