--- a/spotify_quiz/pubspec.yaml
+++ b/spotify_quiz/pubspec.yaml
@@ -54,6 +54,9 @@ dependencies:
   http: ^0.13.5
   flutter_bloc: ^8.1.1
   equatable: ^2.0.5
+  url_launcher: ^6.1.9
+  spotify: ^0.8.0
+  webview_flutter: ^4.0.6
 
 dev_dependencies:
   flutter_test:
