--- a/spotify_quiz/pubspec.yaml
+++ b/spotify_quiz/pubspec.yaml
@@ -35,14 +35,14 @@ dependencies:
   flutter:
     sdk: flutter
     
+    
   
   flutter_dotenv: ^5.0.2
 
   authentication_repository:
     path: packages/authentication_repository
   formz: ^0.4.0
-  user_repository:
-    path: packages/user_repository
+  
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
@@ -85,7 +85,7 @@ flutter:
   uses-material-design: true
   assets:
       - .env
-      - assets/images/
+      - images/logo.png
   generate: true
   # The following line ensures that the Material Icons font is
   # included with your application, so that you can use the icons in
@@ -93,8 +93,7 @@ flutter:
   
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
+ 
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
