--- a/spotify_quiz/pubspec.yaml
+++ b/spotify_quiz/pubspec.yaml
@@ -85,7 +85,7 @@ flutter:
   uses-material-design: true
   assets:
       - .env
-      - assets/images/logo.png
+      - assets/images
   generate: true
   # The following line ensures that the Material Icons font is
   # included with your application, so that you can use the icons in
