--- a/spotify_quiz/pubspec.yaml
+++ b/spotify_quiz/pubspec.yaml
@@ -64,6 +64,9 @@ dependencies:
   spotify: ^0.8.0
   webview_flutter: ^4.0.6
   path_provider: ^2.0.14
+  random_date: ^0.0.7
+  random_x: ^0.3.1
+  uuid: ^3.0.7
 
 dev_dependencies:
   flutter_test:
