--- a/spotify_quiz/android/app/src/main/AndroidManifest.xml
+++ b/spotify_quiz/android/app/src/main/AndroidManifest.xml
@@ -2,6 +2,7 @@
     package="com.example.spotify_quiz">
    <uses-permission android:name="android.permission.INTERNET"/>
    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+   <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"/>
    <application
         android:label="spotify_quiz"
         android:name="${applicationName}"
