events loading image

--- a/spotify_quiz/pubspec.yaml
+++ b/spotify_quiz/pubspec.yaml
@@ -71,6 +71,7 @@ dependencies:
   geocoding: ^2.1.0
   geolocator: ^9.0.2
   auto_size_text: ^3.0.0
+  cached_network_image: ^3.2.3
 
 dev_dependencies:
   flutter_test:
