--- a/spotify_quiz/pubspec.yaml
+++ b/spotify_quiz/pubspec.yaml
@@ -72,6 +72,8 @@ dependencies:
   geolocator: ^9.0.2
   auto_size_text: ^3.0.0
   cached_network_image: ^3.2.3
+  
+
 
 dev_dependencies:
   flutter_test:
@@ -79,7 +81,7 @@ dev_dependencies:
   integration_test:
     sdk: flutter  
 
-
+  flutter_native_splash: any
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
