--- a/spotify_quiz/android/app/src/main/AndroidManifest.xml
+++ b/spotify_quiz/android/app/src/main/AndroidManifest.xml
@@ -6,7 +6,7 @@
    <application
         android:label="SpotiQuiz"
         android:name="${applicationName}"
-        
+        android:roundIcon="@mipmap/ic_launcher"
         android:icon="@mipmap/ic_launcher">
         <activity
             android:name=".MainActivity"
